--- a/resources/css/stylesheet.css
+++ b/resources/css/stylesheet.css
@@ -162,3 +162,66 @@ nav span a {
 
 
 }
+
+.locations {
+    width: 1200px;
+    height: 500px;
+    background-image: url('https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-locations-background.jpg');
+    justify-content: center;
+    flex-wrap: wrap;
+    align-content: center;
+    margin: auto;
+    font-family: Helvetica;
+    color: seashell;
+    text-align: center;
+    font-size: 22px;
+    padding-top: 58px;
+    
+    
+}
+
+
+
+
+.stores {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.downtown {
+    background-color: black;
+    height: 300px;
+    width: 300px;
+    margin: 0 40px;
+    align-content: center;
+
+}
+
+.eastbay{
+    
+    background-color: black;
+    height: 300px;
+    width: 300px;
+    margin: 0 40px;
+    align-content: center;
+}
+
+.oakdale {
+    background-color: black;
+    height: 300px;
+    width: 300px;
+    margin: 0 40px;
+    align-content: center;
+
+}
+
+.footer {
+    font-family: Helvetica;
+    font-size: 22px;
+    color: seashell;
+    width: 100%;
+    height: 150px;
+    align-content: center;
+    text-align: center;
+}
